syntax = "proto3";

package product.v1;

option go_package = "product-catalog-service/proto/product/v1;productv1";

import "google/protobuf/timestamp.proto";

service ProductService {
  // Commands
  rpc CreateProduct(CreateProductRequest) returns (CreateProductReply);
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductReply);
  rpc ActivateProduct(ActivateProductRequest) returns (ActivateProductReply);
  rpc DeactivateProduct(DeactivateProductRequest) returns (DeactivateProductReply);
  rpc ApplyDiscount(ApplyDiscountRequest) returns (ApplyDiscountReply);
  rpc RemoveDiscount(RemoveDiscountRequest) returns (RemoveDiscountReply);

  // Queries
  rpc GetProduct(GetProductRequest) returns (GetProductReply);
  rpc ListProducts(ListProductsRequest) returns (ListProductsReply);
}

// Command Messages

message CreateProductRequest {
  string name = 1;
  string description = 2;
  string category = 3;
  int64 base_price_numerator = 4;
  int64 base_price_denominator = 5;
}

message CreateProductReply {
  string product_id = 1;
}

message UpdateProductRequest {
  string product_id = 1;
  optional string name = 2;
  optional string description = 3;
  optional string category = 4;
}

message UpdateProductReply {}

message ActivateProductRequest {
  string product_id = 1;
}

message ActivateProductReply {}

message DeactivateProductRequest {
  string product_id = 1;
}

message DeactivateProductReply {}

message ApplyDiscountRequest {
  string product_id = 1;
  int64 percentage_numerator = 2;
  int64 percentage_denominator = 3;
  google.protobuf.Timestamp start_date = 4;
  google.protobuf.Timestamp end_date = 5;
}

message ApplyDiscountReply {}

message RemoveDiscountRequest {
  string product_id = 1;
}

message RemoveDiscountReply {}

// Query Messages

message GetProductRequest {
  string product_id = 1;
}

message GetProductReply {
  Product product = 1;
}

message ListProductsRequest {
  optional string category = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message ListProductsReply {
  repeated ProductListItem items = 1;
  string next_page_token = 2;
}

message Product {
  string product_id = 1;
  string name = 2;
  string description = 3;
  string category = 4;
  string status = 5;
  Money effective_price = 6;
}

message ProductListItem {
  string product_id = 1;
  string name = 2;
  string category = 3;
  string status = 4;
  Money effective_price = 5;
}

message Money {
  int64 numerator = 1;
  int64 denominator = 2;
}

